--- a/doi-confirmation.html
+++ b/doi-confirmation.html
@@ -77,12 +77,23 @@
       flex: 1;
     }
     #formStatus {
-      font-size: 15px;
-      margin-top: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      margin-top: 20px;
+      padding: 20px;
+      width: 100%;
+      max-width: 400px;
+      margin: 20px auto;
+      background-color: #e0f7fa;
+      color: #00796b;
+      border: 2px solid #00796b;
+      border-radius: 10px;
+      text-align: center;
+      box-sizing: border-box;
     }
     .submit-wrapper {
       text-align: center;
-      margin-top: 10px;
+      margin-top: 20px;
     }
     button {
       padding: 10px 25px;
